# trader-dashboard

./: .coverage  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  README.rst  celery_app.py  coverage.xml  main.py  mypy.ini  pipo.dot  pyproject.toml  pyspark_query.py  requirements.txt  sb3_bug.py  tox.ini  trader_standalone.py
.github/workflows/: pylint.yml  tests.yml
celery_app/: Dockerfile  app.py  cache.py  callbacks.py  celery_app.py  dag.py  db.py  memcache_lock.py  requirements.txt  tasks.py  test.html  trader.py  traders.py  train.py  validate.py  vec_env.py
celery_app/log/monitor/test_job3/0/: 0.monitor.csv
celery_app/log/monitor/test_job3/1/: 1.monitor.csv
celery_app/log/monitor/test_job3/2/: 2.monitor.csv
celery_app/log/monitor/test_job3/3/: 3.monitor.csv
data/: spx  test_upload
k8s/: celery.yaml  fedora_debug.yaml  k8s.yaml  nvidia_debug.yaml  persistent_volume.yaml  postgres-deployment.yaml  postgres_config.yaml  redis_config.yaml  redis_deployment.yaml  redis_service.yaml  sanic.yaml
log/: monitor.csv
log/monitor/: default.monitor.csv  test_job.monitor.csv
sanic_app/: Dockerfile  db.py  requirements.txt  sanic_app.py
sanic_app/src/: __init__.py  db.py  get_fred_data.py  memoryqueue.py
sanic_app/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/: __init__.py  db.py  get_fred_data.py  ingestion.py  lib.rs  loss.py  memoryqueue.py  merge_stock_and_macro.py  render_gfx.py  run_reinforcement_model.py  sanic_vec_env.py  test_sqlalchemy.py  trader.py
tests/: data.csv  test_sanic_vec_env.py  test_trader.py
