[package]
name = "celery_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "celery_app"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
polars = { verison = "0.38.1", features = ["lazy"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
polars-arrow = "0.38.1"
pyo3-polars = "0.12.0"