[package]
name = "celery_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "celery_app"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
polars = { verison = "0.38.1", features = ["lazy"]}
polars-arrow = "0.38.1"
pyo3-polars = "0.12.0"
chrono = "0.4.19"